--- a/resources/style.css
+++ b/resources/style.css
@@ -4,20 +4,38 @@ html {
   font-size: 16px;
 }
 
+body {
+  margin: 0;
+  padding: 0;
+}
+
 /*Header*/
 header {
   border: 1px solid red;
-  /*position: fixed;*/
+  line-height: 2rem;
   width: 100%;
-  display: flex;
+  height: 4rem;
   background-color: white;
-  align-items: center;
-  justify-content: space-between;
+  position: fixed;
+
+
 }
 
 header nav {
-  display: inline-flex;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin: 0 1.5rem;
+}
 
+nav div {
+  display: flex;
+  align-items: center;
+}
+
+ul li {
+  display: inline;
+  padding-left: 1.5rem;
 }
 
 header span {
