Adjusted html and css for banner and general section.

--- a/resources/style.css
+++ b/resources/style.css
@@ -10,6 +10,10 @@ body {
   padding: 0;
 } /*Removes default margin and padding (that causes space above header).*/
 
+/*section {
+  width: 100%;
+}*/
+
 a {
   text-decoration: none; /* Removes underline from links*/
 }
@@ -25,7 +29,7 @@ ul li {
 
 .large-media img, .large-media video {
   width: 40rem;
-  margin: 2rem 1.5rem;
+  /*margin: 2rem 1.5rem;*/
 }
 
 /*Header*/
@@ -66,14 +70,21 @@ header span span {
 /*Banner*/
 .banner {
   background-color: hsl(0, 0%, 80%);
-  margin-bottom: 2rem;
+  /*margin: 2rem;*/
   position: relative;
   top: 4rem;
+  width: 100%;
+}
+
+.banner-content {
+  width: 40rem;
+  margin: 2rem 1.5rem;
 }
 
 .banner-text {
   margin: auto;
-  width: 20rem;
+  min-width: 20rem;
+  padding: 0 1.5rem;
 }
 
 .banner-text button {
@@ -89,7 +100,41 @@ header span span {
 .general {
   border: 1px solid red;
   background-color: hsl(0, 0%, 100%);
-  padding-top: 2rem;
+  padding-top: 4rem;
+
+}
+
+.general-left {
+  width: 40rem;
+  margin: 2rem 1.5rem;
+}
+
+.general-right {
+  flex-direction: column;
+
+}
+
+.panel-right {
+  min-width: 40%;
+  display: flex;
+
+}
+
+.panel-right img {
+  width: 10rem;
+  height: 10rem;
+  display: block;
+  padding: 1rem;
+}
+
+.right-text {
+  flex-direction: column;
+  width: 65%;
+  justify-content: center;
+}
+
+.lecturer {
+  background-color: hsl(0, 0%, 80%);
 }
 
 /*Courses Section*/
