--- a/resources/style.css
+++ b/resources/style.css
@@ -52,9 +52,9 @@ header span span {
   color: hsl(0, 0%, 55%);
 }
 
-/*Banner*/
+/*Banner Section*/
 
-/*General Section*/
+/*Inforation Section*/
 
 /*Courses Section*/
 
