--- a/resources/style.css
+++ b/resources/style.css
@@ -28,7 +28,7 @@ header {
   line-height: 2rem;
   width: 100%;
   height: 4rem;
-  background-color: white;
+  background-color: hsl(0, 0%, 100%);
   position: fixed;
   z-index: 2;
 }
@@ -157,7 +157,6 @@ header .light {
 }
 
 .courses h1 {
-  border: 1px solid red;
   width: 100%;
   text-align: center;
 }
@@ -200,7 +199,6 @@ header .light {
 }
 
 .thesis h1 {
-  border: 1px solid red;
   width: 100%;
   text-align: center;
 }
@@ -237,3 +235,38 @@ video {
 }
 
 /*Footer*/
+hr {
+    border: 0;
+    height: 1px;
+    background: #333;
+    background-image: linear-gradient(to right, #ccc, #333, #ccc);
+    margin: 0;
+}
+
+footer {
+  width: 100%;
+  background-color: hsl(0, 0%, 100%);
+  padding-bottom: 2rem;
+}
+
+footer nav {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin: 1rem 1.5rem;
+}
+
+nav div {
+  display: flex;
+  align-items: center;
+}
+
+ul li {
+  display: inline;
+  padding-left: 1rem;
+}
+
+footer a, .footer-text {
+  color: #4a4a4a;
+  font-size: 14px;
+}
