Added html for header mobile and set media inquiries on css for header.

--- a/resources/style.css
+++ b/resources/style.css
@@ -73,11 +73,22 @@ header .light {
   color: hsl(0, 0%, 55%);
 }
 
-@media only screen and (max-width: 560px) {
-  header .bold, header .light {
+header .mobile {
+  display: none;
+}
+
+@media only screen and (max-width: 595px) {
+  header .desktop {
     display: none;
   }
+  header .mobile {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+  }
 }
+
+
 
 /*Banner Section*/
 .banner {
