--- a/resources/style.css
+++ b/resources/style.css
@@ -190,10 +190,14 @@ header .mobile {
     display: none;
   }
   .info-right {
-    width: 100%;
+    width: auto;
     flex-direction: column;
+    align-items: center;
   }
   .right-text {
+    width: 100%;
+  }
+  .panel-right img {
     width: 100%;
   }
 }
@@ -237,6 +241,37 @@ header .mobile {
 
 .course-text {
   margin: 1rem 1rem 1.5rem 1rem;
+}
+
+@media only screen and (max-width: 595px) {
+  .course-row {
+    display: none;
+  }
+  .courses {
+    border: 1px solid red;
+    background-color: hsl(0, 0%, 100%);
+    flex-direction: column;
+    align-items: center;
+    padding: 2rem 2rem 0.5rem 2rem;
+  }
+  .courses .mobile {
+    border: 1px solid blue;
+    width: 100%;
+    flex-direction: column;
+    align-items: center;
+    padding: 1rem;
+
+  }
+  .courses .mobile p {
+    border: 1px solid yellow;
+    margin: 0 1rem 0.5rem 1rem;
+    background-color: hsl(0, 0%, 90%);
+    padding: 1rem 1rem 1.5rem 1rem;
+    width: 100%;
+  }
+  .courses h1 {
+    /*padding-bottom: -0.5rem;*/
+  }
 }
 
 /*Thesis Section*/
