--- a/resources/style.css
+++ b/resources/style.css
@@ -108,6 +108,11 @@ header .mobile {
 .banner-text {
   margin: auto;
   width: 40%;
+  padding-right: 1.5rem;
+}
+
+.banner-text h1, .banner-text p {
+  width: auto;
 }
 
 button {
@@ -129,6 +134,7 @@ button {
     margin: 2rem 1rem;
     display: flex;
     flex-direction: column;
+    padding-left: 1.5rem;
   }
 }
 
@@ -273,6 +279,8 @@ button {
     flex-direction: column;
     align-items: center;
     padding: 2rem 2rem 0.5rem 2rem;
+    border-top: 1px solid hsl(0, 0%, 90%);
+    border-bottom: 1px solid hsl(0, 0%, 90%);        
     width: auto;
   }
   .courses .mobile {
