--- a/resources/style.css
+++ b/resources/style.css
@@ -25,7 +25,7 @@ a {
 
 p {
   font-size: 0.75rem;
-  line-height: 1rem;
+  line-height: 1.2;
 }
 
 /*Header*/
@@ -117,7 +117,7 @@ header .mobile {
 
 button {
   width: 100%;
-  line-height: 2rem;
+  line-height: 2;
 }
 
 @media only screen and (max-width: 595px) {
@@ -280,7 +280,7 @@ button {
     align-items: center;
     padding: 2rem 2rem 0.5rem 2rem;
     border-top: 1px solid hsl(0, 0%, 90%);
-    border-bottom: 1px solid hsl(0, 0%, 90%);        
+    border-bottom: 1px solid hsl(0, 0%, 90%);
     width: auto;
   }
   .courses .mobile {
@@ -295,6 +295,14 @@ button {
     background-color: hsl(0, 0%, 90%);
     padding: 1rem 1rem 1.5rem 1rem;
     width: 100%;
+  }
+  .courses .mobile button {
+    width: 100%;
+    line-height: 3;
+    padding: 0;
+    margin: 0 1rem;
+    border: 1px solid red;
+    text-align: left;
   }
 }
 
