--- a/resources/style.css
+++ b/resources/style.css
@@ -217,7 +217,7 @@ header .mobile {
   color: hsl(200, 100%, 45%);
 }
 
-.info h1, .thesis h1 {
+.info h1, .courses h1, .thesis h1 {
   font-size: 1.5rem;
   font-weight: 600;
   text-align: center;
@@ -286,6 +286,10 @@ header .mobile {
   text-align: center;
 }
 
+#course-id {
+  line-height: 2rem;
+}
+
 .courses .mobile {
   display: none;
 }
@@ -343,6 +347,9 @@ header .mobile {
     background-color: hsl(0, 0%, 90%);
     padding: 1rem 1rem 1.5rem 1rem;
     width: 100%;
+    font-size: 1.25rem;
+    font-weight: 500;
+    text-align: center;
   }
 }
 
