--- a/resources/style.css
+++ b/resources/style.css
@@ -236,7 +236,7 @@ header .mobile {
   font-weight: 600;
 }
 
- .info p {
+ .info p, .thesis p {
   padding: 0.5rem 0;
 }
 
@@ -347,7 +347,7 @@ header .mobile {
     background-color: hsl(0, 0%, 90%);
     padding: 1rem 1rem 1.5rem 1rem;
     width: 100%;
-    font-size: 1.25rem;
+    font-size: 1rem;
     font-weight: 500;
     text-align: center;
   }
@@ -398,6 +398,11 @@ video {
 
 .fisma {
   background-color: hsl(0, 0%, 80%);
+}
+
+.thesis a {
+  font-size: 1.2rem;
+  font-weight: 600;
 }
 
 @media only screen and (max-width: 595px) {
