--- a/resources/style.css
+++ b/resources/style.css
@@ -30,6 +30,10 @@ a:hover {
   font-weight: bold;
 }
 
+.courses a:hover, .thesis a:hover, .light:hover {
+  color: hsl(200, 100%, 45%);
+}
+
 p {
   font-size: 0.75rem;
   line-height: 1.2;
@@ -284,6 +288,7 @@ header .mobile {
 .courses h1 {
   width: 100%;
   text-align: center;
+  letter-spacing: 0.075em;
 }
 
 #course-id {
@@ -364,6 +369,7 @@ header .mobile {
 .thesis h1 {
   width: 100%;
   text-align: center;
+  letter-spacing: 0.075em;
 }
 
 .thesis .mobile {
